# superstore

./: README.md  analysis.md  pyproject.toml
data/: sample_superstore_updated.csv
notebooks/: analysis_in_py.ipynb
output/: pct_change_profit_sales.csv  profit_delta.csv  sales_delta.csv
scripts/: analysis_in_sql.sql  clean_headers.py  create_table.sql  insert_records.sql  main.py  state_abbrev.py  superstore_analysis.py  test.py
