[tool.poetry]
name = "superstore-analysis"
version = "0.1.0"
description = "an analysis of superstore data"
authors = ["Dilcia Mercedes <dilcia.mercedes@paramount.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
