[tool.poetry]
name = "superstore-analysis"
version = "0.1.0"
description = "an analysis of superstore data"
authors = ["Dilcia Mercedes <dilcia.mercedes@paramount.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
matplotlib = "^3.9.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
